@@ -9,6 +9,9 @@
     "studio": "cloud-studio --port 3001 --hostname 0.0.0.0",
     "typecheck": "tsc --noEmit"
   },
+  "prisma": {
+    "seed": "bun run seed.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "prisma": "6",
