@@ -1,4 +1,5 @@
 import { PrismaClient } from "@prisma/client";
+import { hashPassword } from "better-auth/crypto";
 
 const prisma = new PrismaClient({
   datasources: { db: { url: "file:./prisma/dev.db" } }
@@ -25,6 +26,85 @@ async function main() {
     });
   }
   console.log("✅ System settings seeded");
+
+  // Seed test user accounts
+  const users = [
+    {
+      name: "Admin",
+      email: "admin@hauzisha.co.ke",
+      password: "Admin@2026#",
+      role: "ADMIN",
+      isApproved: true,
+      emailVerified: true,
+    },
+    {
+      name: "James Agent",
+      email: "jamesagent@gmail.com",
+      password: "12345678",
+      role: "AGENT",
+      isApproved: true,
+      emailVerified: true,
+    },
+    {
+      name: "James Promoter",
+      email: "jamespromoter@gmail.com",
+      password: "12345678",
+      role: "PROMOTER",
+      isApproved: true,
+      emailVerified: true,
+    },
+  ];
+
+  for (const userData of users) {
+    const hashedPassword = await hashPassword(userData.password);
+
+    // Upsert the user record
+    const user = await prisma.user.upsert({
+      where: { email: userData.email },
+      update: {
+        name: userData.name,
+        role: userData.role,
+        isApproved: userData.isApproved,
+        emailVerified: userData.emailVerified,
+      },
+      create: {
+        id: crypto.randomUUID(),
+        name: userData.name,
+        email: userData.email,
+        role: userData.role,
+        isApproved: userData.isApproved,
+        emailVerified: userData.emailVerified,
+      },
+    });
+
+    // Upsert the account record (Better Auth credential store)
+    // Account model has no @@unique([providerId, accountId]), so use findFirst + create/update
+    const existingAccount = await prisma.account.findFirst({
+      where: {
+        providerId: "credential",
+        accountId: userData.email,
+      },
+    });
+
+    if (existingAccount) {
+      await prisma.account.update({
+        where: { id: existingAccount.id },
+        data: { password: hashedPassword },
+      });
+    } else {
+      await prisma.account.create({
+        data: {
+          id: crypto.randomUUID(),
+          userId: user.id,
+          providerId: "credential",
+          accountId: userData.email,
+          password: hashedPassword,
+        },
+      });
+    }
+
+    console.log(`✅ Seeded user: ${userData.email} (${userData.role})`);
+  }
 
   await prisma.$disconnect();
 }
